mobile first anpassungen

--- a/templates/craft_sicherungWebsite/templates/_layouts/footer.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/footer.html
@@ -10,22 +10,41 @@
 </div>
 
   <style>
-  input[type="email"]::-webkit-input-placeholder {
-    color: white !important;
+  #footerDesktop {
+    input[type="email"]::-webkit-input-placeholder {
+      color: white !important;
+    }
+
+    input[type="email"]:-moz-placeholder { /* Firefox 18- */
+      color: white !important;
+    }
+
+    input[type="email"]::-moz-placeholder {  /* Firefox 19+ */
+      color: white !important;
+    }
+
+    input[type="email"]:-ms-input-placeholder {
+      color: white !important;
+    }
   }
 
-  input[type="email"]:-moz-placeholder { /* Firefox 18- */
-    color: white !important;
-  }
+  #footerHandy {
+    input[type="email"]::-webkit-input-placeholder {
+      color: white !important;
+    }
 
-  input[type="email"]::-moz-placeholder {  /* Firefox 19+ */
-    color: white !important;
-  }
+    input[type="email"]:-moz-placeholder { /* Firefox 18- */
+      color: white !important;
+    }
 
-  input[type="email"]:-ms-input-placeholder {
-    color: white !important;
-  }
+    input[type="email"]::-moz-placeholder {  /* Firefox 19+ */
+      color: white !important;
+    }
 
+    input[type="email"]:-ms-input-placeholder {
+      color: white !important;
+    }
+  }
   #footerDesktop a { /* Die Links im Footer weiß einfärben */
       color: #d7d7d7;
   }
