--- a/templates/craft_sicherungWebsite/templates/projekte/projektberichte.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/projektberichte.html
@@ -21,7 +21,7 @@
   </div>
   {% set entries = craft.entries.section('projektberichte').all() %}
 
-  <<div class="container zwoelferspaltenlayout">
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
     <div class="card-deck">
       <div class="row">
 
