--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -1,9 +1,15 @@
 
+<style>
+.nav-item {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+</style>
 
 <!-- navbar-light links the colors with the background image -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
-  <div class="container achterspaltenlayout" style="padding: 0px;">
+  <div class="container zwoelferspaltenlayout" style="padding: 0px;">
 
     <!-- Chance Logo -->
     <a class="navbar-brand"  href="https://aufbau-website.de/craft/web/">
@@ -18,7 +24,7 @@
     </button>
 
     <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar"  >
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" id="home" href="https://aufbau-Website.de/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
@@ -44,13 +50,6 @@
 
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/ueberUns/empfehlungen.html">Empfehlungen</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Empfehlung</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Empfehlung</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Empfehlung</a></li>
-                </ul>
               </li>
             </li>
           </ul>
@@ -98,9 +97,9 @@
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/einmalig.html">Allgemein Spenden</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein">Einmalig</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein.html">Einmalig</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein">Regelmäßig</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html">Regelmäßig</a></li>
                 </ul>
               </li>
 
@@ -191,6 +190,6 @@
 
 </nav>
 
-<div class="container-fluid no-padding" style="position:fixed; top:0; z-index: 900;">
+<div class="container-fluid no-padding" style="position:fixed; top:-2px; z-index: 900;">
   <div class="rectangle" id="rechteck"></div>
 </div>
