--- a/templates/craft_sicherungWebsite/templates/fuerSie/daheim.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/daheim.html
@@ -47,18 +47,20 @@
   </div>
 </div>
 
+
 {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
-<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
-  <div class="row">
-    <div class="col-1">  </div>
-    <div class="col-2">   <img class="img-fluid" src="{{ entry.bild2.one().url }}" style="max-height: 200px;"> </div>
-    <div class="col-1">  </div>
-    <div class="col-7">
-      <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
-      <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-      <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+  <div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
+    <div class="row">
+      <div class="col-md-1">  </div>
+      <div class="col-md-2">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild2.one().url }}" style="max-height: 150px; padding-bottom: 0;"> </div>
+      <div class="col-md-1">  </div>
+      <div class="col-md-7" style="padding-left: 30px;">
+        <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
+        <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
+        <a href="https://aufbau-website.de/craft/web/spenden" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+      </div>
     </div>
-  </div>
-</div> <!-- Der orange Berg mit dem Spendenaufruf -->
+  </div> <!-- Der orange Berg mit dem Spendenaufruf -->
+
 
 {% endblock %}
