--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung.html
@@ -49,8 +49,31 @@
   </div>
 
   <div class="container achterspaltenlayout">
-      <div id="copy"> {{ entry.text }} </div>
+      <div id="info"> {{ entry.text }} </div>
   </div>
-  <img class="img-fluid"   src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
+  <img class="img-fluid" style="padding-bottom: 0;"  src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
+
+<div class="container-fluid no-padding" style="background-color: white; padding-top: .5rem;">
+
+  <div class="container zwoelferspaltenlayout text-center" style="margin-top: 0;">
+    <hr style="margin-bottom: 1rem;">
+   <div id="anleser" style="padding-bottom: 3rem;"> Weitere Informationen zum Freiwilligendienst </div>
+  </div>
+
+  {% set entry = craft.entries.section('fuerSie').slug('erfahrungsberichte').one() %}
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 4rem;">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </div>
+    <div class="col-md-8" style="padding-top: 2rem;">
+      <h3> {{ entry.title }} </h3>
+      <div id="copy"> {{ entry.anleser }}</div>
+    </div>
+  </div>
+  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+
+</div>
+
 
 {% endblock %}
