--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
@@ -5,7 +5,7 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 8rem; position: relative;">
 
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
@@ -14,8 +14,8 @@
   <div class="container achterspaltenlayout" style="padding-top:0px;">
     {% set entry = craft.entries.section('fuerSie').slug('freiwillig-helfen').one() %}
 
-    <div style="padding-bottom:50px; ">
-      <h1 style="padding-bottom: 30px;"> {{ entry.title }}  </h1>
+    <div style="padding-bottom:3rem; ">
+      <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
       <div id="anleser"> {{ entry.anleser }}</div>
       </div>
     </div>
@@ -23,7 +23,7 @@
 
   {% set entries = entry.children().all() %}
 
-    <div class="container zwoelferspaltenlayout">
+    <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
       <div class="card-deck">
         <div class="row">
 
