--- a/templates/craft_sicherungWebsite/templates/fuerSie/index.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/index.html
@@ -1,9 +1,14 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
-
-
 {% block block1 %}
+
+<style>
+hr {
+  margin-top: -1rem;
+  margin-bottom: 0;
+}
+</style>
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
@@ -14,14 +19,14 @@
   <div class="container achterspaltenlayout" style="padding-top:0px;">
     {% set entry = craft.entries.section('fuerSie').slug('chance-kommt').one() %}
 
-    <div style="padding-bottom:50px; ">
-      <h1 style="padding-bottom: 30px;"> {{ entry.text }}  </h1>
+    <div style="padding-bottom:3rem; ">
+      <h1 style="padding-bottom: 2rem;"> {{ entry.text }}  </h1>
       <div id="anleser"> {{ entry.zusatzfeld1 }}</div>
       </div>
     </div>
   </div>
 
-  <div class="container zwoelferspaltenlayout">
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
     <div class="card-deck">
       <div class="row">
 
@@ -43,7 +48,7 @@
         {% endfor %}
         </div>
       </div>
-    </div>
+    </div> <!-- Die verschiedenen Für-Sie Sektionen als Karten dargestellt -->
 
     {% set entry = craft.entries.section('fuerSie').slug('freundesbrief').one() %}
     <div class="container-fluid no-padding" style="background-color: #ffffff;">
@@ -54,14 +59,35 @@
             <div id="anleser"> {{ entry.anleser }}    </div>
           </div>
           <div class="col-sm-6">
-            <form class="form-inline" action="/action_page.php" style="padding-bottom: 20px;">
-             <input type="email" class="form-control" placeholder=" Ihre E-Mail-Adresse" style="margin-right: 30px; padding-right: 60px;">
-             <button type="submit" class="btn btn-primary">Anmelden</button>
-           </form>
-           <div id="copy"> {{ entry.text }} </div>
+            {% macro errorList(errors) %}
+            {% if errors %}
+            <ul class="errors">
+              {% for error in errors %}
+              <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+            {% endmacro %}
+
+            {% from _self import errorList %}
+
+            <form class="form-inline" method="post" action="" accept-charset="UTF-8">
+              {{ csrfInput() }}
+              <input type="hidden" name="action" value="contact-form/send">
+              {{ redirectInput('contact/thanks') }}
+
+              <input id="from-email" required class="form-control" type="email" style="margin-right: 1rem; padding-right: 3rem; margin-bottom: 1rem;" name="fromEmail" placeholder="Ihre E-Mail-Adresse" value="{{ message.fromEmail ?? '' }}">
+              {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
+              <input type="submit" value="Anmelden" class="btn btn-primary">
+
+              <textarea style="display: none;" rows="10" cols="40" id="message" name="message">Die oben genannte E-Mail-Adresse würde sich gerne für den Newsletter anmelden.</textarea>
+              {{ message is defined and message ? errorList(message.getErrors('message')) }}
+
+            </form>
+           <div id="copy" style="padding-top: 2rem;"> {{ entry.text }} </div>
           </div>
         </div>
-      </div>
+      </div> <!-- Freundesbrief abonnieren -->
     </div> <!-- Weißer Hintergrundcontainer -->
 
     {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
@@ -77,7 +103,7 @@
     <div class="row">
 
       {% for entry in entries %}
-      <div class="col-sm-4">
+      <div class="col-sm-4" style="padding-bottom: 2rem;">
         <img class="img-fluid rounded-circle" src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="width: 40%; padding-bottom: 0;">
         <h4 style="padding-top: 1.5rem;"> {{ entry.title }} </h4>
         <div id="copy"> {{ entry.anleser }}   </div>
@@ -91,15 +117,16 @@
     <div id="anleser"> {{ entry.text }}  </div>
   </div>
 
-  <div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
+  <div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
     <div class="row">
-      <div class="col-1">  </div>
-      <div class="col-2">   <img class="img-fluid" src="{{ entry.bild2.one().url }}" style="max-height: 200px;"> </div>
-      <div class="col-1">  </div>
-      <div class="col-7">
+      <div class="col-md-1">  </div>
+      <div class="col-md-2">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild2.one().url }}" style="max-height: 150px; padding-bottom: 10px;"> </div>
+      <div class="col-md-1">  </div>
+      <div class="col-md-7" style="padding-left: 30px;">
         <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
         <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+        <a href="https://aufbau-website.de/craft/web/spenden" class="btn btn-primary" role="button">Jetzt Spenden</a>
       </div>
     </div>
   </div> <!-- Der orange Berg mit dem Spendenaufruf -->
