--- a/templates/craft_sicherungWebsite/templates/fuerSie/projektbesuch.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/projektbesuch.html
@@ -26,9 +26,28 @@
   <div id="copy"> {{ entry.text }} </div>
 </div>
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" id="info">
     {{ entry.zusatzfeld2 }}
   </div>
+
+  <div class="container zwoelferspaltenlayout text-center" style="padding-top: 0;">
+    <hr>
+   <div id="copy" style="padding-bottom: 3rem;"> Das könnte Sie auch interessieren</div>
+  </div>
+
+  {% set entry = craft.entries.section('fuerSie').slug('für-sie-daheim').one() %}
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 4rem;">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </div>
+    <div class="col-md-8" style="padding-top: 2rem;">
+      <h3> {{ entry.title }} </h3>
+      <div id="copy"> {{ entry.anleser }}</div>
+    </div>
+  </div>
+</div> <!-- Weitere Informationen für sie daheim -->
+
 </div>
 
 {% endblock %}
