--- a/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -78,7 +78,7 @@
       <div id="anleser"> {{ entry.anleser }}    </div>
     </div>
 
-    <div class="container zwoelferspaltenlayout">
+    <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
 
       <div class="row">
         {% set entries = craft.entries.section('projekte').slug('bewahrung-schöpfung').one().children().all() %}
@@ -129,13 +129,13 @@
     <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz_maedchen.jpg').one().getUrl() }}">
   </div>
 
-  <div class="container zwoelferspaltenlayout text-center">
+  <div class="container zwoelferspaltenlayout text-center" style="min-height: 372px;">
     {% set entry = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one() %}
-    <h3> {{ entry.title }} </h3>
+    <h3 style="padding-bottom: 2rem;"> {{ entry.title }} </h3>
 
     {% set entry = craft.entries.section('projekte').slug('1-11').one() %}
 
-    <div id="carouselContent" class="carousel slide" data-ride="carousel">
+    <div id="carouselContent" class="carousel slide" data-ride="carousel" data-interval="false">
       <div class="carousel-inner">
         <div class="carousel-item active text-center">
           <div class="row">
@@ -164,8 +164,9 @@
         </div>
       </div>
 
+      {% set entry = craft.entries.section('projekte').slug('2-11').one() %}
         <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <img class="carousel-control-prev-icon" aria-hidden="true" src="{{ entry.bild.one().url }}" style="margin-left: -120%;"></img>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
@@ -177,7 +178,7 @@
   </div>
 
 
-  <div class="container achterspaltenlayout text-center">
+  <div class="container achterspaltenlayout text-center" style="padding-top: 2rem;">
     {% set entry = craft.entries.section('projekte').slug('gelingenden-leben').one() %}
 
     <h2> {{ entry.title }} </h2>
