--- a/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
@@ -4,12 +4,14 @@
   <title>Chance International</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <link href="https://aufbau-website.de/craft/web/CSSundJS/bootstrapcustom.min.css" rel="stylesheet" crossorigin="anonymous"/>
+  <link href="https://www.aufbau-website.de/craft/web/CSSundJS/bootstrapcustom.min.css" rel="stylesheet" crossorigin="anonymous"/>
+
+
   <link href="https://www.aufbau-website.de/craft/web/CSSundJS/stylevorgaben.css" rel="stylesheet" />
   <link href="https://aufbau-website.de/craft/web/CSSundJS/stylevorgaben.css" rel="stylesheet" />
 
   <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />
-
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
@@ -24,13 +26,16 @@
 
 <body>
 
+  <div class="bootstrapiso">
+
   {% block headerbildPosition1 %} {% endblock %}
 
+</div>
 
 
 {% include "_layouts/navbar" %}
 
-
+<div class="bootstrapiso">
 
 {% block headerbildPosition2 %} {% endblock %}
 
@@ -43,6 +48,7 @@
 
 {% include "_layouts/footer" %}
 
+</div>
 
   </body>
   </html>
